--- a/webclient/styles/src/index.styl
+++ b/webclient/styles/src/index.styl
@@ -5,14 +5,45 @@ html, body, #main
 	padding: 0px
 	box-sizing: border-box
 
-html, body, p, h1, h2, h3, h4, h5, h6, textarea, input, button, span, div, main
+html, body, p, h1, h2, h3, h4, h5, h6, textarea, input, button, span, div, main, select
 	font-family: Hack, monospace
 
 #main
 	padding: 20px
 
-	h1
-		border-bottom: 2px solid black
+	#page
+		width: 100%
+		height: 100%
+		display: flex
+		flex-direction: column
 
-textarea
-	resize: none
+		.header
+			position: relative
+
+			h1
+				border-bottom: 2px solid black
+
+			select
+				position: absolute
+				bottom: 25px
+				right: 20px
+				font-size: 14px
+
+		.content
+			flex-grow: 1
+			display: flex
+			flex-direction: column
+
+			textarea
+				resize: none
+				flex-grow: 1
+				padding: 10px 10px 25px 10px
+
+			.actions
+				padding: 10px
+				text-align: center
+
+				button
+					padding: 3px 10px
+					margin: 0px 10px
+					border: 1px solid black
