--- a/webclient/styles/src/index.styl
+++ b/webclient/styles/src/index.styl
@@ -47,3 +47,12 @@ html, body, p, h1, h2, h3, h4, h5, h6, textarea, input, button, span, div, main,
 					padding: 3px 10px
 					margin: 0px 10px
 					border: 1px solid black
+
+			#examples
+				li
+					padding: 3px 0px
+					list-style: none
+					cursor: pointer
+
+				li:hover
+					background-color: #ffff44
