everything works, probably need to refactor a bit though

--- a/webclient/styles/src/index.styl
+++ b/webclient/styles/src/index.styl
@@ -56,3 +56,18 @@ html, body, p, h1, h2, h3, h4, h5, h6, textarea, input, button, span, div, main,
 
 				li:hover
 					background-color: #ffff44
+
+			.incoming
+				border-collapse: separate
+				border-spacing: 0px 5px
+
+				td
+					padding: 3px
+
+				tr.spam
+					td
+						background-color: rgba(255, 0, 0, 0.5)
+
+				tr.notspam
+					td
+						background-color: rgba(0, 255, 0, 0.5)
