--- a/webclient/styles/src/index.styl
+++ b/webclient/styles/src/index.styl
@@ -49,6 +49,10 @@ html, body, p, h1, h2, h3, h4, h5, h6, textarea, input, button, span, div, main,
 					border: 1px solid black
 
 			#examples
+				ul
+					font-size: 14px
+					padding: 0
+
 				li
 					padding: 3px 0px
 					list-style: none
